--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -1,6 +1,9 @@
 include_directories(".")
 
+include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+conan_basic_setup()
+
 file(GLOB_RECURSE SOURCE_FILES ./*)
 add_executable(unit_tests ${SOURCE_FILES})
 
-target_link_libraries(unit_tests)
+target_link_libraries(unit_tests ${CONAN_LIBS})
