--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ after_success:
   # Creating report
   - cd ${TRAVIS_BUILD_DIR}
   # - lcov --directory libs --directory  gui --directory build --capture --no-external --output-file coverage.info # capture coverage info
-  - lcov --directory  gui --directory build --capture --no-external --output-file coverage.info # capture coverage info
+  - lcov --directory build --capture --no-external --output-file coverage.info # capture coverage info
   - lcov --remove coverage.info '/usr/*' --output-file coverage.info # filter out system
   # - lcov --remove coverage.info '3rd_party/*' --output-file coverage.info # filter out system
   - lcov --list coverage.info #debug info
