--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,10 +1,9 @@
 include_directories(".")
-include_directories("../lib")
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
 file(GLOB_RECURSE SOURCE_FILES ./*)
-add_executable(unit_tests ${SOURCE_FILES})
+add_library(lib ${SOURCE_FILES})
 
-target_link_libraries(unit_tests lib ${CONAN_LIBS})
+target_link_libraries(lib ${CONAN_LIBS})
