--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ os:
   - linux
 
 before_install:
+  - git submodule init
+  - git submodule update
   - sudo chmod 777 ./travis-scripts/*
   - ./travis-scripts/dependencies.sh
   # Codecov
@@ -20,6 +22,7 @@ script:
   - ./travis-scripts/build.sh
 
 after_success:
+  - ls 3rd_party/expected
   - pwd
   - find . -name "*.gcda"
   - find . -name "*.gcno"
