cleaning up the travis file a bit

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,17 +22,11 @@ script:
   - ./travis-scripts/build.sh
 
 after_success:
-  - ls 3rd_party/expected
-  - pwd
-  - find . -name "*.gcda"
-  - find . -name "*.gcno"
-  - find ${TRAVIS_BUILD_DIR} -name "*.gcda"
-  - find ${TRAVIS_BUILD_DIR} -name "*.gcno"
   # Creating report
   - cd ${TRAVIS_BUILD_DIR}
-  - lcov --directory lib --directory  gui --directory build --capture --no-external --output-file coverage.info # capture coverage info
+  - lcov --directory lib --directory build --capture --no-external --output-file coverage.info # capture coverage info
   - lcov --remove coverage.info '/usr/*' --output-file coverage.info # filter out system
-  # - lcov --remove coverage.info '3rd_party/*' --output-file coverage.info # filter out system
+  - lcov --remove coverage.info '3rd_party/*' --output-file coverage.info # filter out system
   - lcov --list coverage.info #debug info
   # Uploading report to CodeCov
   - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
