--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 	add_definitions("-DBOOST_CONFIG_SUPPRESS_OUTDATED_MESSAGE")
 else()
 	message("using ${CMAKE_CXX_COMPILER_ID}")
-	add_definitions("-std=c++2a")
+	add_definitions("-std=c++17")
 	add_definitions("-fprofile-arcs")
 	add_definitions("-ftest-coverage")
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage" )
