--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_install:
   - sudo pip install conan
   - sudo pip install codecov
   - conan search Catch* --remote=conan-center
+  - ~/.conan/profiles/default
 
 script:
   - ./travis-scripts/build.sh
